DRILL-843: Drillbit goes down after running a large number of queries in a series